fixed padding of landing service card text on small screens

--- a/src/components/landing/services/serviceCard/style.css
+++ b/src/components/landing/services/serviceCard/style.css
@@ -1,7 +1,6 @@
 .service-container {
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 20px;
+    width: 100%;
+    margin-bottom: 30px;
 }
 
 .service-image {
@@ -59,7 +58,6 @@
     border: 1px solid rgb(0, 110, 255);
     color: rgb(0, 110, 255);
     font-family: 'Raleway', 'sans-serif';
-    margin-top: 20px;
     /* border-radius: 3px; */
     letter-spacing: .03em;
     font-size: .9em;
@@ -79,8 +77,12 @@
     font-size: .9em;
     width: 100%;
     height: 100%;
-    padding: 25px;
     letter-spacing: 1px;
+    padding: 10px;
+}
+
+.description-text p {
+    font-size: 13px;
 }
 
 .description-text,
@@ -107,14 +109,14 @@
     }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 480px) {
     .service-container {
-        width: 100%;
-        margin-bottom: 30px;
+        width: 90%;
+        margin: 0 auto;
+        margin-top: 20px;
     }
-
     .description-text {
-        padding: 30px;
+        padding: 25px;
     }
 }
 /* 
